--- a/src/main/webapp/import_your_data_network_builder_option_2.xhtml
+++ b/src/main/webapp/import_your_data_network_builder_option_2.xhtml
@@ -46,29 +46,22 @@
                     <div class="col-12 md:9 lg:col-9">
                         <h:form enctype="multipart/form-data">
                             <h:graphicImage name="images/round_1_orange.png" width="20" height="20" style="vertical-align: bottom;"/>
-                            <p:spacer width="5"/>
-                            <p:commandLink id="fileBtn" value="#{text['import_data.general.open_a_file']}" type="button" />
-                            <p:overlayPanel
-                                for="fileBtn"
-                                dynamic="true"
-                                widgetVar="fileInputChooser"
-                                style="width:700px;"
-                                >
-                                <p:fileUpload
-                                    label="#{text['import_data.general.choose_csv_or_excel']}"
-                                    mode="advanced"
-                                    multiple="false"
-                                    auto="false"
-                                    skinSimple="true"
-                                    sizeLimit="100000000"
-                                    listener="#{oneFileUploadInMultipleUploadBean.handleFileUpload}"
-                                    oncomplete="PF('fileInputChooser').hide()"
-                                    update=":formRead :notifications"
-                                    allowTypes="/(\.|\/)(csv|tsv|xlsx|txt)$/">                                
-                                </p:fileUpload>
-                                #{text['general.message.max_file_size']}: 100Mb. #{text['import_data.option2.file_must_have_columns']}
-                                <br/>
-                            </p:overlayPanel>
+                            <div>
+                                <p:spacer height="5" width="5"/>
+                            </div>
+                            <p:fileUpload
+                                label="#{text['import_data.general.choose_csv_or_excel']}"
+                                mode="advanced"
+                                multiple="false"
+                                auto="false"
+                                skinSimple="true"
+                                sizeLimit="100000000"
+                                listener="#{oneFileUploadInMultipleUploadBean.handleFileUpload}"
+                                update=":formRead :notifications"
+                                allowTypes="/(\.|\/)(csv|tsv|xlsx|txt)$/">                                
+                            </p:fileUpload>
+                            #{text['general.message.max_file_size']}: 100Mb. #{text['import_data.option2.file_must_have_columns']}
+                            <br/>
                             <br/>
                             <p:outputLabel
                                 rendered="#{dataImportBean.filesUploaded.size() gt '0'}"
@@ -83,10 +76,14 @@
                         <p:outputPanel id="formRead">
                             <h:form enctype="multipart/form-data" >
                                 <!--READ FILE BUTTON-->
-                                <h:graphicImage name="images/round_2_orange.png" width="20" height="20" style="vertical-align: bottom;"/>
+                                <h:graphicImage name="images/round_2_orange.png" width="20" height="20" style="vertical-align: middle;"/>
                                 <p:spacer width="5"/>
-                                <p:commandLink id="readFileBtn" value="#{text['import_data.general.read_data']}" onclick="PF('pbAjaxLong').start()"
-                                               action="#{dataImportBean.readData}" update=":tab"/>
+                                <p:commandButton
+                                    id="readFileBtn"
+                                    value="#{text['import_data.general.read_data']}"
+                                    onclick="PF('pbAjaxLong').start()"
+                                    action="#{dataImportBean.readData}"
+                                    update=":tab"/>
                                 <br/>
                                 <br/>
                                 <!--PROGRESS BAR FOR READ OPERATION-->
